@@ -67,21 +67,19 @@
 
 #table_publishers_row_head
 <tr class="row1">
-	<th class="col2" onclick="ctrack.dosort('publisher');" 			title="{table_publisher_tip_title_text}"		>
-		{table_publisher_title_publisher_text}</th>
-	<th class="col3" onclick="ctrack.dosort('trans');"  colspan="3" title="{table_donor_tip_title_transaction_text}">
-		<span>{table_donor_title_transaction_text}</span></th>
-	<th class="col4" onclick="ctrack.dosort('budget');" colspan="2" title="{table_donor_tip_title_budget_text}"		>
-		<span>{table_donor_title_budget_text}</span></th>
+	<th class="col2" onclick="ctrack.dosort('publisher');" title="{table_publisher_tip_title_text}">{table_publisher_title_publisher_text}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></th>
+	<th class="col3" colspan="3" title="{table_donor_tip_title_transaction_text}"><span onclick="ctrack.dosort('trans');">{table_donor_title_transaction_text}</span><span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></th>
+	<th class="col4" colspan="2" title="{table_donor_tip_title_budget_text}"><span onclick="ctrack.dosort('budget');">{table_donor_title_budget_text}</span><span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></th>
 </tr>
 <tr class="row2">
-	<td class="col2" title="{table_sort_text}"  onclick="ctrack.dosort('publisher');" 	>{table_donor_subtitle_donor_text}</td>
-	<td class="col3" title="{table_sort_text}" 	onclick="ctrack.dosort('t1');" 	>{year1}</td>
-	<td class="col4" title="{table_sort_text}" 	onclick="ctrack.dosort('t2');" 	>{year2}</td>
-	<td class="col5" title="{table_sort_text}" 	onclick="ctrack.dosort('t3');" 	>{year3}</td>
-	<td class="col6" title="{table_sort_text}" 	onclick="ctrack.dosort('b1');" 	>{year3}</td>
-	<td class="col7" title="{table_sort_text}" 	onclick="ctrack.dosort('b2');" 	>{year4}</td>
+	<td class="col2" title="{table_sort_text}"  onclick="ctrack.dosort('publisher');" >{table_donor_subtitle_donor_text}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></td>
+	<td class="col3" title="{table_sort_text}" 	onclick="ctrack.dosort('t1');" 	>{year1}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></td>
+	<td class="col4" title="{table_sort_text}" 	onclick="ctrack.dosort('t2');" 	>{year2}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></td>
+	<td class="col5" title="{table_sort_text}" 	onclick="ctrack.dosort('t3');" 	>{year3}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></td>
+	<td class="col6" title="{table_sort_text}" 	onclick="ctrack.dosort('b1');" 	>{year3}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></td>
+	<td class="col7" title="{table_sort_text}" 	onclick="ctrack.dosort('b2');" 	>{year4}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></td>
 </tr>
+
 
 #table_publishers_row
 <tr class="rows" onclick="return ctrack.url('{mark_no_publisher}&publisher={reporting_ref}#view=publisher');">
