@@ -8,6 +8,7 @@ Fixed dropmenu width issues
 Adjusted image brightness on search view
 Added Generator banner to search view
 Updated missing view header text
+Added sorting icons to publishers view
 
 
 Development Portal (2016-11-16 shi)
